# context-project

./: .clang-format  .codedocs  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  FlatZipAssets.cmake  LICENSE  README.md  build-android-ndk.sh  build-deps.sh  build-droid.sh  build.gradle  build.sh  compile.bat  compile.sh  compile_oldlinux.sh  cross-clang.Dockerfile  cross-deps.Dockerfile  cross-test.Dockerfile  cross_clang.Dockerfile  cross_deps.Dockerfile  docker-compose-3rd.yml  docker-compose-dep.yml  docker-compose-dependencies.yml  docker-compose-deps.yml  docker-compose.yml  docker.bat  docker.sh  docker_clang.sh  docker_compile.sh  docker_deps.sh  install-dependencies.sh  local.properties  oldlinux.Dockerfile  push-dockers.sh  (+2 more)
Engine/: CMakeLists.txt
Engine/Android/: build.gradle
Engine/Android/app/: build.gradle
Engine/Dependencies/: CMakeLists.txt
Engine/Dependencies/Patch/: ogre-13.4.0.patch  sdl2-2.0.20.patch
Engine/GLSL/: PBR.frag
Engine/GLSLES/: Sprite.vert
Engine/Programs/Compositor/: MRT.compositor  bloom.material  filters.material  gaussx3.frag
Engine/Programs/GLSL/: Default.frag
Engine/Programs/GLSLES/: Default.frag
Engine/Programs/Overlay/: ImGui.fontdef
Engine/Programs/PBR/: atmos.glsl
Engine/Source/: DotSceneLoaderB.cpp  DotSceneLoaderB.h  Engine.cpp  Engine.h  ImGuiInputListener.cpp  NoCopy.h  PCHeader.h  Physics.cpp  Physics.h  Platform.h  RendererSystemGL.cpp  Sound.cpp  Sound.h  pch.h
Engine/Source/Caelum/: Astronomy.cpp  BrightStarCatalogue.cpp  (+9 more)
Example/: CMakeLists.txt
Example/Source/: DemoDotAppState.cpp  Main.cpp  MenuAppState.cpp  MenuAppState.h
Source/: CMakeLists.txt
Source/Android/: gradle.properties
Source/Dependencies/: CMakeLists.txt
Source/Engine/: Engine.cpp  Physics.h  WindowObserver.h  shell_minimal.html
Source/Example/: CMakeLists.txt
Source/Examples/: CMakeLists.txt
Source/Glue/: CMakeLists.txt
Source/Sample/: CMakeLists.txt
Source/Tests/: CMakeLists.txt
Source/include/: Android.h  DesktopIcon.h  FastNoiseLite.h  ImGuiHelpers.h  PCHeader.h  ReflectionCamera.h
Source/src/: Application.cpp  ImGuiHelpers.cpp  LuaBind.cpp  OWAnimatedMesh.cpp  RTSS.cpp  RenderSystemGL3.cpp  SinbadCharacterController.cpp  System.cpp
contrib/: .gitignore  CMakeLists.txt
contrib/patch/: PatchAngelscript.cmake  PatchLibreSSL.cmake  assimp-5.2.5.patch  assimp-5.3.1.patch  assimp-5.4.0.patch  assimp-5.4.3.patch  cpr-1.10.4.patch  cpr-1.10.5.patch  gns-1.4.1.patch  gns-de03d74.patch  libressl-3.8.0.patch  lua.cmake  ogg-1.3.5.patch  ogre-13.2.4.patch  ogre-13.4.0.patch  ogre-13.5.0.patch  ogre-14.0.0.patch  ogre-14.1.0.patch  ogre-14.2.0.patch  ogre-14.3.0.patch  openal-1.23.1.patch  sdl2-2.0.20.patch  sdl2-2.26.0.patch  sdl2-2.30.3.patch  sdl2-2.30.7.patch  sol2-3.3.0.patch  theora.cmake  vorbis-1.3.7.patch  yojimbo.cmake
demo/: CMakeLists.txt
demo/include/: DemoDotAppState.h  MenuAppState.h  pcheader.h
demo/src/: DemoDotAppState.cpp  MenuAppState.cpp  main.cpp
dependencies/: CMakeLists.txt  Dockerfile
dependencies/patch/: cegui-0.8.patch  ogre-1.12.10.patch  ogre-1.12.11-android.patch  ogre-1.12.11-apple.patch  openal-1.21.1-clang-mingw.patch
doc/: CMakeLists.txt  Dockerfile  Doxyfile.in
source/: CMakeLists.txt
source/Android/: build.gradle
source/Engine/: .gitignore  app.manifest  build.gradle  pch.h
source/Example/: CMakeLists.txt
source/GLSL/: Default.frag  PBR.frag  PBR.vert  Sky.frag  Sky.vert  Sprite.vert
source/GLSLES/: Default.frag  PBR.frag  PBR.vert  Sky.frag  Sky.vert  Sprite.vert
source/Tools/: Zip2Cpp.cpp  binary_to_compressed_c.cpp  material.py
source/include/: AppState.h  Application.h  AssetLoader.h  AssetManager.h  AudioSystem.h  CameraMan.h  ComponentLocator.h  Compositor.h  Config.h  CubeMapCamera.h  DesktopIcon.h  DotSceneLoaderB.h  Engine.h  Exception.h  Input.h  InputHandler.h  Landscape.h  NoCopy.h  ObjectPtr.h  Overlay.h  PbrShaderUtils.h  PhysicsSystem.h  ReflectionCamera.h  RenderSystem.h  RtssUtils.h  SDL2.hpp  Scene.h  SinbadCharacterController.h  Singleton.h  StateManager.h  SubSystem.h  System.h  TerrainMaterialGeneratorB.h  VegetationSystem.h  VerboseListener.h  Window.h  view_ptr.h
source/src/: AppState.cpp  Application.cpp  AssetLoader.cpp  AssetManager.cpp  AudioSystem.cpp  CameraMan.cpp  ComponentLocator.cpp  Compositor.cpp  Config.cpp  CubeMapCamera.cpp  DesktopIcon.cpp  DotSceneLoaderB.cpp  Engine.cpp  GlueMain.cpp  ImGuiInputListener.cpp  Input.cpp  InputHandler.cpp  Landscape.cpp  Log.cpp  LuaBind.cpp  Overlay.cpp  PhysicsSystem.cpp  ReflectionCamera.cpp  RenderSystem.cpp  RendererGLES2.cpp  RtssUtils.cpp  Scene.cpp  SinbadCharacterController.cpp  StateManager.cpp  TerrainMaterialGeneratorB.cpp  VegetationSystem.cpp  VerboseListener.cpp  Window.cpp
sources/: CMakeLists.txt
sources/include/: Android.h  AndroidApplication.h  AppState.h  Application.h  AssetManager.h  Assets.h  Audio.h  AudioSystem.h  BaseApplication.h  Camera.h  CameraMan.h  Component.h  ComponentLocator.h  Compositor.h  CompositorHelper.h  CompositorHelpers.h  Config.h  Configurator.h  ConfiguratorJson.h  CubeMapCamera.h  DesktopApplication.h  DesktopIcon.h  DotSceneLoaderB.h  Engine.h  Entity.h  Exception.h  Field.h  Forest.h  Gorilla.h  HwCheck.h  INIReader.h  IO.h  ImGuiInputListener.h  IniConfigurator.h  Input.h  InputHandler.h  JsonConfigurator.h  Landscape.h  Locator.h  Log.h  (+47 more)
sources/src/: AndroidApplication.cpp  AppState.cpp  Application.cpp  AssetManager.cpp  Assets.cpp  Audio.cpp  AudioSystem.cpp  BaseApplication.cpp  CameraMan.cpp  Component.cpp  ComponentLocator.cpp  Compositor.cpp  Config.cpp  Configurator.cpp  CubeMapCamera.cpp  DesktopApplication.cpp  DesktopIcon.cpp  DotSceneLoaderB.cpp  Engine.cpp  Exception.cpp  Field.cpp  Forest.cpp  Gorilla.cpp  HwCheck.cpp  INIReader.cpp  ImGuiInputListener.cpp  Input.cpp  InputHandler.cpp  JsonConfigurator.cpp  Landscape.cpp  Locator.cpp  Log.cpp  LuaBind.cpp  MeshUtils.cpp  Overlay.cpp  Pages.cpp  PbrShaderUtils.cpp  PbrUtils.cpp  Physic.cpp  Physics.cpp  (+27 more)
(+2613 files in other folders)
