# This source file is part of Glue Engine. Created by Andrey Vasiliev

include(InsertDependency)
include(AppleThreadFix)

if (NOT MOBILE)
    insert_dependency(OpenGL)
else ()
    insert_dependency(OpenGLES2)
endif ()
insert_dependency(Threads)
insert_dependency_static(Bullet)
mark_as_advanced(BULLET_INCLUDE_DIR)
insert_dependency_static(ZLIB)
insert_dependency(Lua51)
insert_dependency(OpenAL)
insert_dependency_static(Ogg)
insert_dependency_static(Vorbis)
insert_dependency_static(SDL2)
insert_dependency_static(PNG)
insert_dependency_static(Freetype)
insert_dependency_static(assimp)
insert_dependency_static(pugixml)
set(OGRE_STATIC 1)
insert_dependency_static(OGRE)

if ((ANDROID OR IOS) AND ANY_NOT_FOUND)
    add_library(AndroidDummy SHARED ${CMAKE_SOURCE_DIR}/Android/app/src/main/cpp/main.cpp)
    add_dependencies(AndroidDummy ThirdParty)
endif ()

if (ANY_NOT_FOUND)
    return()
endif ()

add_subdirectory(Glue)
add_subdirectory(Examples)
add_subdirectory(Tests)
