# This file is part of Glue Engine. Created by Andrey Vasiliev

include(InsertDependency)
include(AppleThreadFix)

if (NOT MOBILE)
    insert_dependency(OpenGL)
else ()
    insert_dependency(OpenGLES2)
endif ()
insert_dependency(Threads)
insert_dependency_static(Bullet)
mark_as_advanced(BULLET_INCLUDE_DIR)
insert_dependency_static(ZLIB)
insert_dependency(Lua51)
insert_dependency(OpenAL)
insert_dependency_static(Ogg)
insert_dependency_static(Vorbis)
insert_dependency_static(SDL2)
insert_dependency_static(PNG)
insert_dependency_static(Freetype)
insert_dependency_static(pugixml)
set(OGRE_STATIC 1)
insert_dependency_static(OGRE)

if ((ANDROID OR IOS) AND ANY_NOT_FOUND)
    add_library(AndroidDummy SHARED ${CMAKE_SOURCE_DIR}/Android/app/src/main/cpp/main.cpp)
    add_dependencies(AndroidDummy ThirdParty)
endif ()

if (ANY_NOT_FOUND)
    return()
endif ()

option(GLUE_BUILD_STATIC_LIBRARY "Build static library" ON)

if (GLUE_BUILD_STATIC_LIBRARY)
    include(GlueCppFlags)
    include(GlueBuildVariables)

    file(GLOB_RECURSE GLUE_ENGINE_SOURCE_FILES ${CMAKE_SOURCE_DIR}/Source/src/*.cpp ${CMAKE_SOURCE_DIR}/Source/include/*.h include/*.hpp)
    file(GLOB_RECURSE SHADER_SOURCE_FILES ${CMAKE_SOURCE_DIR}/Programs/*)

    source_group(TREE ${CMAKE_SOURCE_DIR}/Source PREFIX "Source" FILES ${GLUE_ENGINE_SOURCE_FILES})
    source_group(TREE ${CMAKE_SOURCE_DIR}/Programs PREFIX "Assets" FILES ${SHADER_SOURCE_FILES})
    if (MSVC)
        list(APPEND GLUE_ENGINE_SOURCE_FILES ${SHADER_SOURCE_FILES})
        set_source_files_properties(${SHADER_SOURCE_FILES} PROPERTIES LANGUAGE Assets)
    elseif (${CMAKE_GENERATOR} STREQUAL "Xcode")
        list(APPEND GLUE_ENGINE_SOURCE_FILES ${SHADER_SOURCE_FILES})
        set_source_files_properties(${SHADER_SOURCE_FILES} PROPERTIES EXTERNAL_OBJECT TRUE)
    endif ()

    add_library(GlueStatic STATIC EXCLUDE_FROM_ALL ${GLUE_ENGINE_SOURCE_FILES})
    include_directories(GlueStatic ${GLUE_INCLUDE_DIRS})
    set_target_properties(GlueStatic PROPERTIES OUTPUT_NAME "GlueStatic")
    include_directories(GlueStatic include ${GLUE_INCLUDE_DIRS})
    target_precompile_headers(GlueStatic PUBLIC include/PCHeader.h)
endif ()
